--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-    "engines": {
+  "engines": {
     "node": "22.14.0"
-    },
+  },
   "name": "pro",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,7 +26,6 @@
     "express-session": "^1.18.2",
     "joi": "^18.0.0",
     "method-override": "^3.0.0",
-    "mongoos": "^0.0.1-security",
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
